@@ -7,8 +7,11 @@ import com.companyapp.backend.repository.AvailabilityRepository;
 import com.companyapp.backend.repository.ShiftAssignmentRepository;
 import com.companyapp.backend.services.AuditLogService;
 import com.companyapp.backend.services.AvailabilityService;
+import com.companyapp.backend.services.dto.request.AvailabilityDayDto;
 import com.companyapp.backend.services.dto.request.AvailabilityDTO;
 import com.companyapp.backend.services.dto.request.MonthlyAvailabilityRequestDto;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -16,29 +19,25 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.time.YearMonth;
 import java.time.ZoneId;
+import java.time.ZonedDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
+@RequiredArgsConstructor
 public class AvailabilityServiceImpl implements AvailabilityService {
 
     private final AvailabilityRepository repository;
     private final ShiftAssignmentRepository shiftAssignmentRepository;
     private final AuditLogService auditLogService;
 
-    public AvailabilityServiceImpl(AvailabilityRepository repository,
-                                   ShiftAssignmentRepository shiftAssignmentRepository,
-                                   AuditLogService auditLogService) {
-        this.repository = repository;
-        this.shiftAssignmentRepository = shiftAssignmentRepository;
-        this.auditLogService = auditLogService;
-    }
+    private static final ZoneId UTC_ZONE = ZoneId.of("UTC");
 
     @Override
     @Transactional(readOnly = true)
-    // PŘIDÁNA ANOTACE @CheckOwnership PRO KONTROLU IDOR
     public List<AvailabilityDTO> getMonthlyAvailability(@CheckOwnership UUID userId, YearMonth yearMonth) {
         LocalDate startDate = yearMonth.atDay(1);
         LocalDate endDate = yearMonth.atEndOfMonth();
@@ -46,47 +45,13 @@ public class AvailabilityServiceImpl implements AvailabilityService {
         List<Availability> entityList = repository.findByUserIdAndDateRange(userId, startDate, endDate);
         List<ShiftAssignment> assignments = shiftAssignmentRepository.findAssignmentsForUsersInDateRange(List.of(userId), startDate, endDate);
 
-        return entityList.stream().map(entity -> {
-            AvailabilityDTO dto = new AvailabilityDTO();
-            dto.setId(entity.getId());
-            dto.setDate(entity.getAvailableDate());
-            dto.setMorning(entity.isMorning());
-            dto.setAfternoon(entity.isAfternoon());
-
-            // Zjištění reálných směn v tento den
-            List<ShiftAssignment> dayAssignments = assignments.stream()
-                    .filter(sa -> sa.getShift().getShiftDate().equals(entity.getAvailableDate()))
-                    .collect(Collectors.toList());
-
-            boolean mShift = false;
-            boolean aShift = false;
-            StringBuilder details = new StringBuilder();
-
-            for (ShiftAssignment sa : dayAssignments) {
-                int startHour = sa.getStartTime().atZone(ZoneId.of("UTC")).getHour();
-                int endHour = sa.getEndTime().atZone(ZoneId.of("UTC")).getHour();
-
-                if (startHour < 12) mShift = true;
-                if (endHour >= 14 || startHour >= 12) aShift = true;
-
-                if (details.length() > 0) details.append(" | ");
-                details.append(sa.getShift().getStation().getName())
-                        .append(" (").append(sa.getStartTime().atZone(ZoneId.of("UTC")).toLocalTime().toString())
-                        .append("-").append(sa.getEndTime().atZone(ZoneId.of("UTC")).toLocalTime().toString()).append(")");
-            }
-
-            dto.setHasMorningShift(mShift);
-            dto.setHasAfternoonShift(aShift);
-            dto.setShiftDetails(details.toString());
-            dto.setConfirmed(mShift || aShift);
-
-            return dto;
-        }).collect(Collectors.toList());
+        return entityList.stream()
+                .map(entity -> mapToAvailabilityDTO(entity, assignments))
+                .toList();
     }
 
     @Override
     @Transactional
-    // PŘIDÁNA ANOTACE @CheckOwnership PRO KONTROLU IDOR (Díky rozhraní Ownable to umíme zkontrolovat)
     public void saveMonthlyAvailability(@CheckOwnership MonthlyAvailabilityRequestDto request) {
         UUID userId = request.getUserId();
         YearMonth yearMonth = request.getMonth();
@@ -98,66 +63,120 @@ public class AvailabilityServiceImpl implements AvailabilityService {
 
         repository.deleteAll(existingAvailabilities);
 
-        List<Availability> newEntities = request.getAvailableDays().stream()
-                .map(dto -> {
-                    Availability entity = new Availability();
-                    entity.setUserId(userId);
-                    entity.setAvailableDate(dto.getDate());
-
-                    // DYNAMICKÝ ŠTÍT: Kontrola existujících směn
-                    boolean mShift = false;
-                    boolean aShift = false;
-                    for (ShiftAssignment sa : assignments) {
-                        if (sa.getShift().getShiftDate().equals(dto.getDate())) {
-                            int startHour = sa.getStartTime().atZone(ZoneId.of("UTC")).getHour();
-                            int endHour = sa.getEndTime().atZone(ZoneId.of("UTC")).getHour();
-                            if (startHour < 12) mShift = true;
-                            if (endHour >= 14 || startHour >= 12) aShift = true;
-                        }
-                    }
-
-                    // Backend natvrdo přepíše požadavek frontendu, pokud na danou půlku dne existuje směna!
-                    entity.setMorning(mShift ? true : dto.isMorning());
-                    entity.setAfternoon(aShift ? true : dto.isAfternoon());
-                    entity.setConfirmed(mShift || aShift);
-
-                    if (!entity.isMorning() && !entity.isAfternoon()) return null;
-                    return entity;
-                })
+        List<Availability> newEntities = new ArrayList<>(request.getAvailableDays().stream()
+                .map(dto -> createAvailabilityEntity(userId, dto, assignments))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList());
 
-        // Záchrana: Pokud frontend omylem den neposlal, ale je tam směna, vrátíme ho tam!
+        ensureAvailabilityForExistingShifts(userId, newEntities, assignments);
+
+        repository.saveAll(newEntities);
+        logAuditAction(userId, yearMonth);
+    }
+
+    // =========================================================================
+    // EXTRAHOVANÁ LOGIKA (OPRAVA DUPLIKACÍ)
+    // =========================================================================
+
+    private boolean isMorningShift(ShiftAssignment sa) {
+        return sa.getStartTime().atZone(UTC_ZONE).getHour() < 12;
+    }
+
+    private boolean isAfternoonShift(ShiftAssignment sa) {
+        ZonedDateTime start = sa.getStartTime().atZone(UTC_ZONE);
+        ZonedDateTime end = sa.getEndTime().atZone(UTC_ZONE);
+        return end.getHour() >= 14 || start.getHour() >= 12;
+    }
+
+    // =========================================================================
+    // POMOCNÉ MAPOVACÍ METODY
+    // =========================================================================
+
+    private AvailabilityDTO mapToAvailabilityDTO(Availability entity, List<ShiftAssignment> allAssignments) {
+        AvailabilityDTO dto = new AvailabilityDTO();
+        dto.setId(entity.getId());
+        dto.setDate(entity.getAvailableDate());
+        dto.setMorning(entity.isMorning());
+        dto.setAfternoon(entity.isAfternoon());
+
+        enrichWithShiftData(dto, allAssignments);
+        return dto;
+    }
+
+    private void enrichWithShiftData(AvailabilityDTO dto, List<ShiftAssignment> assignments) {
+        StringBuilder details = new StringBuilder();
+        boolean mShift = false;
+        boolean aShift = false;
+
         for (ShiftAssignment sa : assignments) {
-            LocalDate shiftDate = sa.getShift().getShiftDate();
-            boolean isDaySaved = newEntities.stream().anyMatch(e -> e.getAvailableDate().equals(shiftDate));
+            if (sa.getShift().getShiftDate().equals(dto.getDate())) {
+                if (isMorningShift(sa)) mShift = true;
+                if (isAfternoonShift(sa)) aShift = true;
 
-            if (!isDaySaved) {
-                int startHour = sa.getStartTime().atZone(ZoneId.of("UTC")).getHour();
-                int endHour = sa.getEndTime().atZone(ZoneId.of("UTC")).getHour();
-
-                Availability missingDay = new Availability();
-                missingDay.setUserId(userId);
-                missingDay.setAvailableDate(shiftDate);
-                missingDay.setMorning(startHour < 12);
-                missingDay.setAfternoon(endHour >= 14 || startHour >= 12);
-                missingDay.setConfirmed(true);
-                newEntities.add(missingDay);
+                if (!details.isEmpty()) details.append(" | ");
+                details.append(sa.getShift().getStation().getName())
+                        .append(" (").append(sa.getStartTime().atZone(UTC_ZONE).toLocalTime()).append("-")
+                        .append(sa.getEndTime().atZone(UTC_ZONE).toLocalTime()).append(")");
             }
         }
 
-        repository.saveAll(newEntities);
+        dto.setHasMorningShift(mShift);
+        dto.setHasAfternoonShift(aShift);
+        dto.setShiftDetails(details.toString());
+        dto.setConfirmed(mShift || aShift);
+    }
 
+    private Availability createAvailabilityEntity(UUID userId, AvailabilityDayDto dto, List<ShiftAssignment> assignments) {
+        boolean mShift = false;
+        boolean aShift = false;
+
+        for (ShiftAssignment sa : assignments) {
+            if (sa.getShift().getShiftDate().equals(dto.getDate())) {
+                if (isMorningShift(sa)) mShift = true;
+                if (isAfternoonShift(sa)) aShift = true;
+            }
+        }
+
+        Availability entity = new Availability();
+        entity.setUserId(userId);
+        entity.setAvailableDate(dto.getDate());
+        entity.setMorning(mShift || dto.isMorning());
+        entity.setAfternoon(aShift || dto.isAfternoon());
+        entity.setConfirmed(mShift || aShift);
+
+        return (entity.isMorning() || entity.isAfternoon()) ? entity : null;
+    }
+
+    private void ensureAvailabilityForExistingShifts(UUID userId, List<Availability> entities, List<ShiftAssignment> assignments) {
+        for (ShiftAssignment sa : assignments) {
+            LocalDate shiftDate = sa.getShift().getShiftDate();
+            boolean isDaySaved = entities.stream().anyMatch(e -> e.getAvailableDate().equals(shiftDate));
+
+            if (!isDaySaved) {
+                Availability missingDay = new Availability();
+                missingDay.setUserId(userId);
+                missingDay.setAvailableDate(shiftDate);
+                missingDay.setMorning(isMorningShift(sa));
+                missingDay.setAfternoon(isAfternoonShift(sa));
+                missingDay.setConfirmed(true);
+                entities.add(missingDay);
+            }
+        }
+    }
+
+    private void logAuditAction(UUID userId, YearMonth yearMonth) {
         String currentUserEmail = "Neznámý";
         try {
             if (SecurityContextHolder.getContext().getAuthentication() != null) {
                 currentUserEmail = SecurityContextHolder.getContext().getAuthentication().getName();
             }
-        } catch (Exception ignored) {}
+        } catch (Exception e) {
+            log.debug("Audit: Nepodařilo se získat uživatele: {}", e.getMessage());
+        }
 
         auditLogService.logAction(
                 "UPDATE_AVAILABILITY", "Availability", userId.toString(),
-                "Polo-inteligentní aktualizace dostupnosti (" + yearMonth + "). Akci provedl: " + currentUserEmail
+                "Aktualizace dostupnosti (" + yearMonth + "). Provedl: " + currentUserEmail
         );
     }
 }
